--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -1,14 +1,16 @@
 
 .nav {
     height: 70px;
-    width: 100%;
+    width: 95%;
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
+    
   
     &--logo {
       height: 2rem;
       padding: 25px;
+      margin-left: 3rem;
     }
   
     .link {
