--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -10,5 +10,9 @@
   .buttons-container {
     display: flex;
     justify-content: space-between;
+
+    .google {
+      font-size: smaller!important;
+    }
   }
 }
